# fl-backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  .replit  README.md  conftest.py  docker-compose.yml  feed.json  logger.py  manage.py  mismatch.json  mismatch.txt  podcast_db.sqlite  populate.py  pyproject.toml  pytest.ini  replit.nix  requirements.txt  result.json
_old/: download_from_json_feed.py  failed_uploads.json  fetch_from_feed.py  upload_s3.py
base/: models.py  views.py
base/migrations/: 0001_initial.py
collection/: admin.py  models.py  views.py
collection/migrations/: 0001_initial.py  0002_alter_collection_id.py  0003_alter_collection_id.py
frequenza_libera/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
old/: feed.json  fetch_from_feed.py  upload_s3.py
podcast/: admin.py  apps.py  models.py  pagination.py  signals.py  tests.py  urls.py  views.py
podcast/migrations/: 0001_initial.py  0002_alter_podcast_audio_file_alter_podcast_cover_file_and_more.py  0002_alter_podcast_cover.py  0002_alter_podcast_podcasters.py  0002_remove_podcast_subjects_alter_podcast_id.py  0003_alter_podcast_id.py  0003_alter_podcast_insert_time_alter_podcast_update_time.py  0003_podcast_audio_file.py  0004_alter_podcast_audio_file_alter_podcast_audio_url.py  0004_alter_podcast_title.py  0005_alter_podcast_description.py  0005_rename_cover_podcast_cover_url_podcast_cover_file_and_more.py  0006_alter_podcast_duration_alter_podcast_insert_time.py
podcast/models/: podcast.py  podcast_collection.py  podcaster.py
podcast_collection/: admin.py  apps.py  models.py  pagination.py  urls.py  views.py
podcaster/: admin.py  models.py  views.py
services/: feed.py  stream.py
subject/: admin.py  models.py  views.py
templates/: home.html
(+16 files in other folders)
