[project]
name = "fl-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.36.20",
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-s3-storage>=0.15.0",
    "djangorestframework>=3.15.2",
    "feedparser>=6.0.11",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg[binary]>=3.2.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "whitenoise>=6.9.0",
]
